<resources>
    <string name="app_name">Spending Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="strip_text">Submit File</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in_or_register_with_google">Sign In or Register with Google</string>
    <string name="forgot_my_password">Forgot my password</string>
    <string name="forgot_my_password_text_1">Not to worry, please enter your email address and you will be sent a link to reset your password.</string>
    <string name="send_link">Send Link</string>
    <string name="not_received_email">Not received email?</string>
    <string name="back_to_log_in_page">Back to log in page</string>
    <string name="create_new_account">Create new account</string>
    <string name="i_have_forgotten_my_password">I have forgotten my password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_password_again">Enter Password Again</string>
    <string name="submit_and_login">Submit and Login</string>
    <string name="already_have_an_account">Already Have an Account</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="history">History:</string>
    <string name="add_the_venue_to_category">Add the venue to category</string>
    <string name="shopping">Shopping</string>
    <string name="leisure">Leisure</string>
    <string name="food_and_drink">Food and Drink</string>
    <string name="utility_bill">Utility Bill</string>
    <string name="income_source">Income Source</string>
    <string name="other">other:</string>
    <string name="enter_new_category">Enter new category</string>
    <string name="enter_custom_category">Enter custom category</string>
    <string name="latest_week_spending">Latest Week Spending</string>
    <string name="spending_by_category">Spending by Category</string>
    <string name="show_labels_on_the_chart">Show labels on the chart</string>
    <string name="show_percentage_values">Show percentage values</string>
    <string name="income_by_category">Income by Category</string>
    <string name="overview_of_all_your_transactions">Overview of all your transactions:</string>
    <string name="overview_of_your_balance_throughout_the_years">Overview of your balance throughout the years:</string>
    <string name="welcome_back">Welcome back</string>
    <string name="summary">Summary:</string>
    <string name="balance_as_of">Balance as of :</string>
    <string name="income_and_spending_for_the_year">Income and Spending for the year:</string>
    <string name="view_more_analytics">View More Analytics</string>
    <string name="most_recent_transactions">Most Recent Transactions:</string>
    <string name="view_all_transactions">View All Transactions</string>
    <string name="upload_instruction">You can upload your bank statement in this page. Please note:\n \n1 App only supports PDF. \n2 Never upload same statement more than once. \n3 The current version only supports HSBC. \n\nSteps: \n \n1 Click \'Browse\' \n2 Find your statement in your device. \n3 Click \'Submit File\'</string>
    <string name="no_file_selected">No File Selected</string>
    <string name="browse">Browse</string>
    <string name="select_your_bank">Select your bank:</string>
    <string name="quick_tutorial">Quick Tutorial</string>
    <string name="dashboard_screen">Dashboard Screen</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="upload_screen">Upload Screen</string>
    <string name="back">back</string>
    <string name="bottom_navigation_bar">Bottom Navigation Bar</string>
    <string name="list_screen">List Screen</string>
    <string name="category">Category</string>
    <string name="finish">Finish</string>
    <string name="search">Search</string>
    <string name="welcome_to_spending_tracker_please_upload_your_bank_statements_to_start_tracking_your_spending">Welcome to Spending Tracker. Please upload your bank statements to start tracking your spending.</string>
    <string name="upload">Upload</string>
    <!--    <string name="default_web_client_id">539281120180-7439ug3dbm14kuvgulirs8h4ch7r9plb.apps.googleusercontent.com</string>-->

</resources>