<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.DashboardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:paddingBottom="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textSize="20dp"
                android:id="@+id/welcome_mgs_dashboard_tv"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"

                style="@style/Widget.Material3.CardView.Elevated"
                app:cardElevation="@dimen/card_elevation_size"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/summary"
                        android:textSize="15sp"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/balance_as_of"
                        android:textSize="15sp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:id="@+id/tv_summary"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:id="@+id/balance_chip"
                        />


                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.CardView.Elevated"
                app:cardElevation="@dimen/card_elevation_size"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/income_and_spending_for_the_year"
                        android:textSize="15sp"
                        android:layout_margin="15dp"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        />

                    <com.github.mikephil.charting.charts.BarChart
                        android:id="@+id/summaryBarChart"
                        android:layout_width="250dp"
                        android:layout_gravity="center"
                        android:layout_height="250dp"
                        android:layout_margin="10dp"
                        />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/btn_more_analytics"
                android:layout_marginHorizontal="10dp"
                android:layout_gravity="center_horizontal"

                android:text="@string/view_more_analytics"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/most_recent_transactions"
                android:textSize="15sp"
                android:layout_margin="15dp"/>



            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:id="@+id/recyclerview"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:paddingBottom="0dp"
                android:layout_marginBottom="0dp"

                >

            </androidx.recyclerview.widget.RecyclerView>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:layout_marginHorizontal="10dp"
                android:id="@+id/btn_all_transactions"

                android:text="@string/view_all_transactions"/>




        </LinearLayout>

    </ScrollView>
</LinearLayout>